# serializer version: 1
# name: test_all_entities[binary_sensor][binary_sensor.claude_corgan_max_extra_usage_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.claude_corgan_max_extra_usage_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Extra usage enabled',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Extra usage enabled',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'extra_enabled',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_extra_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor][binary_sensor.claude_corgan_max_extra_usage_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Extra usage enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.claude_corgan_max_extra_usage_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor][binary_sensor.claude_corgan_max_limit_reached_before_reset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.claude_corgan_max_limit_reached_before_reset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Limit reached before reset',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Limit reached before reset',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'runway_over',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_runway_over',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor][binary_sensor.claude_corgan_max_limit_reached_before_reset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Claude Corgan (Max) Limit reached before reset',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.claude_corgan_max_limit_reached_before_reset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_account-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_account',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Account',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Account',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'account',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_account',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_account-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Account',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_account',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Corgan',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_animation_group-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'idle',
        'normal',
        'active',
        'heavy',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_animation_group',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Animation group',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Animation group',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'animation_group',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_animation_group',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_animation_group-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Claude Corgan (Max) Animation group',
      'options': list([
        'idle',
        'normal',
        'active',
        'heavy',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_animation_group',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_burn_rate_30_min-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_burn_rate_30_min',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Burn rate (30 min)',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Burn rate (30 min)',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'burn_rate_30m',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_burn_rate_30m',
    'unit_of_measurement': '%/h',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_burn_rate_30_min-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Burn rate (30 min)',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%/h',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_burn_rate_30_min',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_burn_rate_5_min-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_burn_rate_5_min',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Burn rate (5 min)',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Burn rate (5 min)',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'burn_rate_5m',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_burn_rate_5m',
    'unit_of_measurement': '%/h',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_burn_rate_5_min-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Burn rate (5 min)',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%/h',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_burn_rate_5_min',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_burn_rate_per_minute-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_burn_rate_per_minute',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Burn rate per minute',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Burn rate per minute',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'burn_rate_per_min',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_burn_rate_per_min',
    'unit_of_measurement': '%/min',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_burn_rate_per_minute-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Burn rate per minute',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%/min',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_burn_rate_per_minute',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_chat_share_of_weekly_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_chat_share_of_weekly_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Chat share of weekly usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Chat share of weekly usage',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'chat_share',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_chat_share',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_chat_share_of_weekly_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Chat share of weekly usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_chat_share_of_weekly_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_claude_code_share_of_weekly_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_claude_code_share_of_weekly_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Claude Code share of weekly usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Claude Code share of weekly usage',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'claude_code_share',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_claude_code_share',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_claude_code_share_of_weekly_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Claude Code share of weekly usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_claude_code_share_of_weekly_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '90',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_cowork_share_of_weekly_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_cowork_share_of_weekly_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cowork share of weekly usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cowork share of weekly usage',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cowork_share',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_cowork_share',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_cowork_share_of_weekly_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Cowork share of weekly usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_cowork_share_of_weekly_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_extra_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_extra_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Extra usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Extra usage',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'extra_usage',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_extra_usage',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_extra_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Extra usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_extra_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_extra_usage_credits-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_extra_usage_credits',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Extra usage credits',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Extra usage credits',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'extra_credits',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_extra_credits',
    'unit_of_measurement': 'EUR',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_extra_usage_credits-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Claude Corgan (Max) Extra usage credits',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'EUR',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_extra_usage_credits',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12.34',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_extra_usage_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_extra_usage_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Extra usage limit',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Extra usage limit',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'extra_limit',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_extra_limit',
    'unit_of_measurement': 'EUR',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_extra_usage_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Claude Corgan (Max) Extra usage limit',
      'unit_of_measurement': 'EUR',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_extra_usage_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50.0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_extra_usage_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'normal',
        'warning',
        'critical',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_extra_usage_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Extra usage status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Extra usage status',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'extra_severity',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_extra_severity',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_extra_usage_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Claude Corgan (Max) Extra usage status',
      'options': list([
        'normal',
        'warning',
        'critical',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_extra_usage_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'normal',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_other_share_of_weekly_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_other_share_of_weekly_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Other share of weekly usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Other share of weekly usage',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'other_share',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_other_share',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_other_share_of_weekly_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Other share of weekly usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_other_share_of_weekly_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_pace_frame-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'green',
        'orange',
        'red',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_pace_frame',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pace frame',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Pace frame',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pace_frame',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_pace_frame',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_pace_frame-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Claude Corgan (Max) Pace frame',
      'options': list([
        'green',
        'orange',
        'red',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_pace_frame',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'green',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_plan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_plan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Plan',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Plan',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'plan',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_plan',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_plan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Plan',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_plan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Max',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_runway_margin-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_runway_margin',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Runway margin',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Runway margin',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'runway_margin',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_runway_margin',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_runway_margin-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Runway margin',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_runway_margin',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_runway_pace-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_runway_pace',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Runway pace',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Runway pace',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'runway_pace',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_runway_pace',
    'unit_of_measurement': 'x',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_runway_pace-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Runway pace',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'x',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_runway_pace',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_session_limit_eta-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_session_limit_eta',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Session limit ETA',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Session limit ETA',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'limit_eta',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_limit_eta',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_session_limit_eta-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Claude Corgan (Max) Session limit ETA',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_session_limit_eta',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_session_reset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_session_reset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Session reset',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Session reset',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'session_reset',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_session_reset',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_session_reset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Claude Corgan (Max) Session reset',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_session_reset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-06-25T15:00:00+00:00',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_session_resets_in-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_session_resets_in',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Session resets in',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Session resets in',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'session_reset_in',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_session_reset_in',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_session_resets_in-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Claude Corgan (Max) Session resets in',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_session_resets_in',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '180.0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_session_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_session_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Session usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Session usage',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'session_usage',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_session_usage',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_session_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Session usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_session_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_session_usage_peak_today-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_session_usage_peak_today',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Session usage peak today',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Session usage peak today',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'session_peak_today',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_session_peak_today',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_session_usage_peak_today-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Session usage peak today',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_session_usage_peak_today',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_time_to_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_time_to_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Time to limit',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Time to limit',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'time_to_limit',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_time_to_limit',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_time_to_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Claude Corgan (Max) Time to limit',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_time_to_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_usage_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_usage_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Usage rate',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Usage rate',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'usage_rate',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_usage_rate',
    'unit_of_measurement': '%/min',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_usage_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Usage rate',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%/min',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_usage_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_chat_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_weekly_chat_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly chat usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Weekly chat usage',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'chat_week_usage',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_chat_week_usage',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_chat_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Weekly chat usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_weekly_chat_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_claude_code_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_weekly_claude_code_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly Claude Code usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Weekly Claude Code usage',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'claude_code_week_usage',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_claude_code_week_usage',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_claude_code_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Weekly Claude Code usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_weekly_claude_code_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '36.0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_cowork_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_weekly_cowork_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly Cowork usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Weekly Cowork usage',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cowork_week_usage',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_cowork_week_usage',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_cowork_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Weekly Cowork usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_weekly_cowork_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_opus_reset_deprecated-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_weekly_opus_reset_deprecated',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly Opus reset (deprecated)',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Weekly Opus reset (deprecated)',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'opus_reset',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_opus_reset',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_opus_reset_deprecated-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Claude Corgan (Max) Weekly Opus reset (deprecated)',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_weekly_opus_reset_deprecated',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_opus_usage_deprecated-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_weekly_opus_usage_deprecated',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly Opus usage (deprecated)',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Weekly Opus usage (deprecated)',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'opus_usage',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_opus_usage',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_opus_usage_deprecated-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Weekly Opus usage (deprecated)',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_weekly_opus_usage_deprecated',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_other_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_weekly_other_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly other usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Weekly other usage',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'other_week_usage',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_other_week_usage',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_other_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Weekly other usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_weekly_other_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_pace-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.claude_corgan_max_weekly_pace',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly pace',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Weekly pace',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'week_pace',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_week_pace',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_pace-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Weekly pace',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_weekly_pace',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25.7',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_reset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_weekly_reset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly reset',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Weekly reset',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'week_reset',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_week_reset',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_reset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Claude Corgan (Max) Weekly reset',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_weekly_reset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-07-01T12:00:00+00:00',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_sonnet_reset_deprecated-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_weekly_sonnet_reset_deprecated',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly Sonnet reset (deprecated)',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Weekly Sonnet reset (deprecated)',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sonnet_reset',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_sonnet_reset',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_sonnet_reset_deprecated-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Claude Corgan (Max) Weekly Sonnet reset (deprecated)',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_weekly_sonnet_reset_deprecated',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_sonnet_usage_deprecated-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_weekly_sonnet_usage_deprecated',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly Sonnet usage (deprecated)',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Weekly Sonnet usage (deprecated)',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sonnet_usage',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_sonnet_usage',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_sonnet_usage_deprecated-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Weekly Sonnet usage (deprecated)',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_weekly_sonnet_usage_deprecated',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.claude_corgan_max_weekly_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Weekly usage',
    'platform': 'clawdmeter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'week_usage',
    'unique_id': '01JQ8R9XYZ0123456789ABCDEF_week_usage',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor][sensor.claude_corgan_max_weekly_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Claude Corgan (Max) Weekly usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.claude_corgan_max_weekly_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40',
  })
# ---
